All_Component_DX/force-app/main/default/objects/Service_Group_Product__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician that specializes in this product. Reference to an existing Technician record in ServiceMax</description>
    <label>Technician/Equipment</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipName>Service_Group_Product</relationshipName>
    <type>Lookup</type>
</CustomField>