All_Component_DX/force-app/main/default/objects/Service_Group_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product supported by the group. Is a lookup to an existing product in Salesforce</description>
    <inlineHelpText>Product supported by the group. Is a lookup to an existing product in Salesforce</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Service_Group_Product</relationshipName>
    <type>Lookup</type>
</CustomField>