All_Component_DX/force-app/main/default/objects/Service_Group_Product__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <description>Name of the service group. Is a lookup to an existing service group in ServiceMax</description>
    <inlineHelpText>Name of the service group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipName>Service_Group_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>